# bursa-scraper

./: .gitignore  Bursa_scraper.ipynb  README.rst  backup  bursa_scraper.py  pyproject.toml  requirements.txt  sidebar.py
data/: bursa_companies.csv  bursa_companies_p10_rf0.04_int1d_cl0.05.csv  bursa_companies_p1_rf0.04_int1d_cl0.05.csv  bursa_companies_p5_rf0.04_int1d_cl0.05.csv  bursa_companies_p5_rf0.04_int1wk_cl0.05.csv  bursa_companies_p5_rf4.0_int1wk_cl5.0.csv  bursa_companies_p5_rf4.0_int1wk_cl5.0_exwTrue.csv  sector_overview.csv  sector_overview_p10_rf0.04_int1d_cl0.05.csv  sector_overview_p1_rf0.04_int1d_cl0.05.csv  sector_overview_p5_rf0.04_int1d_cl0.05.csv  sector_overview_p5_rf0.04_int1wk_cl0.05.csv  sector_overview_p5_rf4.0_int1wk_cl5.0.csv  sector_overview_p5_rf4.0_int1wk_cl5.0_exwTrue.csv  subsector_overview.csv  subsector_overview_p10_rf0.04_int1d_cl0.05.csv  subsector_overview_p1_rf0.04_int1d_cl0.05.csv  subsector_overview_p5_rf0.04_int1d_cl0.05.csv  subsector_overview_p5_rf0.04_int1wk_cl0.05.csv  subsector_overview_p5_rf4.0_int1wk_cl5.0.csv  subsector_overview_p5_rf4.0_int1wk_cl5.0_exwTrue.csv
notebook/: Bursa_scraper.ipynb  github - bursa_scraper.ipynb  github_bursa_scraper.ipynb
pages/: 02_Chart.py  03_Input.py  03_intro.py
proof/: 0104.KL_daily_calc.xlsx  0104.KL_monthly_calc.xlsx  0104.KL_weekly_calc.xlsx
scripts/: __init__.py  calc_data.py  get_data.py  plot_chart.py  process_csv.py  refresh_data.py  set_dataframe.py  set_input.py
test/: app.py
tests/: test_bursa_scraper.py
