[tool.poetry]
name = "bursa-scraper"
version = "0.1.0"
description = ""
authors = ["tys203831 <tys203831@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
yfinance = "^0.1.74"
requests = "^2.28.1"
pandas = "^1.4.3"
numpy = "^1.23.1"
scipy = "^1.9.0"
streamlit = "^1.12.0"
mpld3 = "^0.5.8"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
